Agora irá salvar o usuário no localStorage, para simular a gravação no banco de dados.

--- a/src/App.css
+++ b/src/App.css
@@ -83,9 +83,15 @@ nav {
 }
 
 #main .card:hover {
-  background-image: linear-gradient(to right bottom, #051937, #002265, #002894, #0027c1, #1214eb);
+  background-color: #155bb5;
   transform: scale(1.1);
+  border-style: hidden;
   color: white;
+}
+
+#main .card:hover button {
+  background-color: white;
+  color: #155bb5;
 }
 
 .hover:hover {
