--- a/src/App.css
+++ b/src/App.css
@@ -73,13 +73,18 @@ body {
 }
 
 nav {
-  position: fixed;
+  position: sticky;
   top: 0;
+  z-index: 2;
   width: 100%;
   font-weight: bold;
   color: white;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.4290966386554622) 35%, rgba(0,212,255,0.06495098039215685) 100%);
+}
+
+#main {
+  margin-top: 100px;
 }
 
 #main .card:hover {
